/*
 * $Id: ChangeLog,v 1.3266 2004/08/03 21:11:15 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-08-04 13:40 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tbrowse.prg
    ! fixex colpos assignment, should change ::lConfigured only if new
      colpos is out of tbrowse display area.
    * removed all duplicated code of ::forcestable() which now calls
      ::stabilize() after setting a new iVar to signal that a full
      stabilization is required. IMHO a loop while ! ::Stabilize()
      enddo is even more clear as a solution, but requires a few more
      tests.
    * cSpacePre/Last/Width and lRect are hidden iVar so I moved them
      after HIDDEN: declaration.

    /* IMHO tbrowse still has LOTS of duplicated code which should be
       removed, just think of ::dispcell() and ::dispcellnormal() which
       do the very same thing apart for a couple of ifs...
       This code duplication makes tbrowse bigger and more difficult to
       maintain.
    */

  * config/w32/global.cf
    ! for loops require a %%var to work

2004-08-03 23:15 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/regex.c
    ! fixed bug I introduced with bad casting - the problem of real
      and complex solution still active.

2004-08-03 17:55 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   ! fixed the hack with HB_CDX_CLIP_AUTOPEN - it cannot work in such
     way because it will change the locking schemes for VFP
   * COMIX and CL5.3 scheme for creating new order implemented:
      INDEX ON .. TO .. (no TAG) => overwrite any index file with given name
      INDEX ON .. TAG .. TO ..   => ads the Tag to index file
      INDEX ON .. TAG .. (no TO) => add the Tag to the structural index